bases/argoworkflows/server-deployment-patch.yaml
# nonk8s
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: argo-server
patch: |-
  - op: add
    path: /spec/template/spec/containers/0/args/-
    value:
      --secure=false
  - op: add
    path: /spec/template/spec/containers/0/args/-
    value:
      --auth-mode=server
  - op: replace
    path: /spec/template/spec/containers/0/readinessProbe/httpGet/scheme
    value: HTTP
target:
  kind: Deployment
  name: argo-server
